--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "sass": "^1.43.4",
     "webpack": "^5.61.0",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
